--- a/style.css
+++ b/style.css
@@ -1,30 +1,40 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: black;
+  /* background-color: black; */
+  font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
 }
 
 .appContainer {
-  background-color: slategray;
-  color: white;
+  /* background-color: slategray; */
+  color: black;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  height: 100%;
+  /* justify-content: center; */
   align-items: center;
-  margin: 1rem;
-  height: 100vh;
-  width: 100%;
+  margin: 16px;
+  /* height: calc(100vh - 100px); */
 }
 
-#heading {
-  margin: 2rem 1rem 0rem 1rem;
-  font-size: 2.1rem;
+.heading-wrap {
+  /* height: 60px; */
+  margin: 32px 0;
+  text-align: center;
+}
+
+.main-wrap {
+  flex-grow: 1;
+  display: flex;
+  gap: 16px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .input {
@@ -47,6 +57,7 @@ body {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  margin: 16px 0;
 }
 
 .subSelectFrom,
@@ -63,70 +74,28 @@ body {
   font-size: 1.5rem;
 }
 
+.cta-wrap {
+  max-width: 200px;
+  width: 100%;
+}
+
 #btn {
-  height: 10%;
-  width: 80%;
-  font-size: 1.5rem;
+  height: 32px;
+  font-size: 16px;
   color: white;
   font-weight: 700;
-  border-radius: 1.7rem;
+  border-radius: 16px;
   background-color: brown;
+  display: block;
+  width: 100%;
+  margin: 16px 0;
 }
 
 p {
-  font-size: 2rem;
+  font-size: 1rem;
 }
 
 i {
-  font-size: 2rem;
+  font-size: 1rem;
   margin: 1.5rem;
-}
-
-/* media queries */
-
-/* Tablet Mode */
-@media screen and (min-width: 600px) {
-  #heading {
-    font-size: 3.5rem;
-  }
-
-  p {
-    font-size: 3rem;
-  }
-
-  .input input {
-    height: 3.5rem;
-    font-size: 2.5rem;
-  }
-
-  .selectTo select,
-  .selectFrom select {
-    font-size: 3rem;
-  }
-
-  i {
-    font-size: 4rem;
-    margin: 2.5rem;
-  }
-
-  #btn {
-    font-size: 2rem;
-  }
-  .subSelectFrom,
-  .subSelectTo {
-    height: 6rem;
-  }
-  img {
-    height: 6rem;
-  }
-  #btn {
-    width: 50%;
-  }
-}
-
-/* Desktop Mode */
-@media screen and (min-width: 1024px) {
-  .selector {
-    flex-direction: row;
-  }
 }
